--- a/GhostStudio.csproj
+++ b/GhostStudio.csproj
@@ -43,6 +43,9 @@
     <Reference Include="JRPC">
       <HintPath>..\_RGH_References_\JRPC.dll</HintPath>
     </Reference>
+    <Reference Include="LibUsbDotNet">
+      <HintPath>..\_References_\LibUsbDotNet.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\WindowsAPICodePack-Core.1.1.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
@@ -119,16 +122,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Forms\" />
-    <Folder Include="JRunner\Classes\" />
-    <Folder Include="JRunner\CPUKeyDatabase\" />
-    <Folder Include="JRunner\DashLaunch\" />
-    <Folder Include="JRunner\DemonN\" />
-    <Folder Include="JRunner\Forms\" />
-    <Folder Include="JRunner\Functions\" />
-    <Folder Include="JRunner\HexEdit\" />
-    <Folder Include="JRunner\ISD\" />
-    <Folder Include="JRunner\Nand\" />
-    <Folder Include="JRunner\Panels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.NETFramework.ReferenceAssemblies.net481.1.0.3\build\Microsoft.NETFramework.ReferenceAssemblies.net481.targets" Condition="Exists('packages\Microsoft.NETFramework.ReferenceAssemblies.net481.1.0.3\build\Microsoft.NETFramework.ReferenceAssemblies.net481.targets')" />
