--- a/GhostStudio.csproj
+++ b/GhostStudio.csproj
@@ -80,6 +80,84 @@
     <Compile Include="Enums\DeadRisingOffset.cs" />
     <Compile Include="Enums\Title.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Forms\BlackOps1Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\BlackOps1Form.Designer.cs">
+      <DependentUpon>BlackOps1Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\BlackOps2Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\BlackOps2Form.Designer.cs">
+      <DependentUpon>BlackOps2Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\BlackOps3Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\BlackOps3Form.Designer.cs">
+      <DependentUpon>BlackOps3Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\DeadRising2OTRForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DeadRising2OTRForm.Designer.cs">
+      <DependentUpon>DeadRising2OTRForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Skate2Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Skate2Form.Designer.cs">
+      <DependentUpon>Skate2Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Skate3Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Skate3Form.Designer.cs">
+      <DependentUpon>Skate3Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\WaWForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\WaWForm.Designer.cs">
+      <DependentUpon>WaWForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\DeadRising2Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DeadRising2Form.Designer.cs">
+      <DependentUpon>DeadRising2Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\DeadRisingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DeadRisingForm.Designer.cs">
+      <DependentUpon>DeadRisingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\GTA4Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GTA4Form.Designer.cs">
+      <DependentUpon>GTA4Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\GTA5Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GTA5Form.Designer.cs">
+      <DependentUpon>GTA5Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MW2Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MW2Form.Designer.cs">
+      <DependentUpon>MW2Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MW3Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MW3Form.Designer.cs">
+      <DependentUpon>MW3Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,9 +198,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Forms\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.NETFramework.ReferenceAssemblies.net481.1.0.3\build\Microsoft.NETFramework.ReferenceAssemblies.net481.targets" Condition="Exists('packages\Microsoft.NETFramework.ReferenceAssemblies.net481.1.0.3\build\Microsoft.NETFramework.ReferenceAssemblies.net481.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
