--- a/GhostStudio.csproj
+++ b/GhostStudio.csproj
@@ -40,6 +40,9 @@
     <Reference Include="Be.Windows.Forms.HexBox">
       <HintPath>..\_References_\Be.Windows.Forms.HexBox.dll</HintPath>
     </Reference>
+    <Reference Include="INIFileParser, Version=2.5.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
+      <HintPath>packages\ini-parser.2.5.2\lib\net20\INIFileParser.dll</HintPath>
+    </Reference>
     <Reference Include="JRPC">
       <HintPath>..\_RGH_References_\JRPC.dll</HintPath>
     </Reference>
@@ -74,10 +77,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\Json.cs" />
     <Compile Include="Constants\Settings.cs" />
+    <Compile Include="Constants\UserFolders.cs" />
+    <Compile Include="Enums\BlackOps2Offset.cs" />
     <Compile Include="Enums\BlackOps2ZombiesOffset.cs" />
     <Compile Include="Enums\CategoryType.cs" />
     <Compile Include="Enums\DeadRisingOffset.cs" />
+    <Compile Include="Enums\GhostsOffset.cs" />
+    <Compile Include="Enums\SkateOffset.cs" />
     <Compile Include="Enums\Title.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Forms\BlackOps1Form.cs">
@@ -166,11 +174,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\CallOfDutyUtils.cs" />
+    <Compile Include="Utilities\CPUKeyUtils.cs" />
+    <Compile Include="Utilities\ConsoleUtility.cs" />
+    <Compile Include="Utilities\DataExtension.cs" />
+    <Compile Include="Utilities\GtaUtils.cs" />
+    <Compile Include="Utilities\Protections.cs" />
     <Compile Include="WinUSB\DeviceManagementAPI.cs" />
     <Compile Include="WinUSB\DeviceManagement.cs" />
     <Compile Include="WinUSB\FileIOApi.cs" />
     <Compile Include="WinUSB\WinUsbDevice.cs" />
     <Compile Include="WinUSB\WinUsbDeviceApi.cs" />
+    <EmbeddedResource Include="Forms\BlackOps2Form.resx">
+      <DependentUpon>BlackOps2Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
