--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ini-parser" version="2.5.2" targetFramework="net481" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.3" targetFramework="net481" developmentDependency="true" />
   <package id="Microsoft.NETFramework.ReferenceAssemblies.net481" version="1.0.3" targetFramework="net481" developmentDependency="true" />
